# Call-center-AI-local

./: .env.example  .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-prod.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
app/: main.py  main_simple.py
app/api/: deps.py
app/api/v1/: calls.py  health.py  webhooks.py  websocket.py
app/core/: config.py  logging.py  security.py
app/db/: connection.py
app/db/repositories/: base.py  call_repository.py
app/models/: call.py
app/services/: audio_processor.py  call_manager.py
app/services/ai/: llm.py  model_manager.py  stt.py  tts.py
app/services/telephony/: base.py  twilio_bridge.py  twilio_handler.py
config/: config-production.yaml  config.yaml
deployments/docker/: Dockerfile  docker-compose.prod.yml
deployments/kubernetes/: deployment.yaml
models/: README.md
models/llm/: .gitkeep
models/tts/: .gitkeep
models/whisper/: .gitkeep
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: alerts.yml
scripts/: download_models.py  migrate_structure.sh
scripts/setup/: setup-local.sh  start-services.sh
