[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "call-center-ai-local"
version = "1.0.0"
description = "Production-ready, on-premise AI-powered call center solution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Organization", email = "support@yourorg.com"},
]
maintainers = [
    {name = "Your Organization", email = "support@yourorg.com"},
]
keywords = [
    "call-center",
    "ai",
    "telephony",
    "speech-recognition",
    "text-to-speech",
    "nlp",
    "twilio",
    "asterisk",
    "real-time",
    "voice",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Telephony",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]

[project.urls]
Homepage = "https://github.com/yourusername/call-center-ai-local"
Documentation = "https://docs.call-center-ai.example.com"
Repository = "https://github.com/yourusername/call-center-ai-local.git"
Issues = "https://github.com/yourusername/call-center-ai-local/issues"

[project.scripts]
call-center-ai = "app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.1.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.14.1",
    "bandit>=1.8.0",
    "safety>=3.2.11",
    "pre-commit>=3.5.0",
    "ipython>=8.18.0",
]
gpu = [
    "torch>=2.0.0+cu118",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "flash-attn>=2.3.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    "tests/",
    ".venv/",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -ra
    -q
    --strict-markers
    --cov=app
    --cov-branch
    --cov-report=term-missing:skip-covered
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=80
"""
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".venv",
    "migrations",
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "migrations",
]
skips = [
    "B101",  # assert_used
]
